; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/gpu/drm/nouveau/core/engine/disp/extr_nv50.c_nv50_disp_base_vblank_enable.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/gpu/drm/nouveau/core/engine/disp/extr_nv50.c_nv50_disp_base_vblank_enable.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.nouveau_event = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.nouveau_event*, i32)* @nv50_disp_base_vblank_enable to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @nv50_disp_base_vblank_enable(%struct.nouveau_event* %0, i32 %1) #0 {
  %3 = alloca %struct.nouveau_event*, align 8
  %4 = alloca i32, align 4
  store %struct.nouveau_event* %0, %struct.nouveau_event** %3, align 8
  store i32 %1, i32* %4, align 4
  %5 = load %struct.nouveau_event*, %struct.nouveau_event** %3, align 8
  %6 = getelementptr inbounds %struct.nouveau_event, %struct.nouveau_event* %5, i32 0, i32 0
  %7 = load i32, i32* %6, align 4
  %8 = load i32, i32* %4, align 4
  %9 = shl i32 4, %8
  %10 = load i32, i32* %4, align 4
  %11 = shl i32 4, %10
  %12 = call i32 @nv_mask(i32 %7, i32 6357036, i32 %9, i32 %11)
  ret void
}

declare dso_local i32 @nv_mask(i32, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
